--- a/config.json
+++ b/config.json
@@ -22,16 +22,16 @@
   },
   "commandDisabled": [],
   "eventDisabled": [],
-  "BOTNAME": "Bot",
+  "BOTNAME": "🍒)⎯⃝BAYJID-BOT♡",
   "PREFIX": "?",
   "ADMINBOT": [
-    "YOUR_FB_UID",
-    "OTHER_FB_UID"
+    "100065506668822",
+    ""
   ],
   "DESIGN": {
-    "Title": "BotPack",
+    "Title": "Thus bot make by Mr Bayjid",
     "Theme": "Blue",
-    "Admin": "YOUR_NAME",
+    "Admin": "MR BAYJID",
     "Setup": {
       "Info": "Design your own custom terminal Titlebar for the title and must contain no numbers",
       "Theme": "Customize your console effortlessly with various theme colors. Explore Aqua, Fiery, Blue, Orange, Pink, Red, Retro, Sunlight, Teen, Summer, Flower, Ghost, Purple, Rainbow, and Hacker themes to enhance your terminal logs."
